Added Storage Management page for admin to manage user quotas by role

--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -11,6 +11,7 @@
     "review": "Review",
     "documents": "Documents",
     "sharedDocs": "Shared Docs",
+    "storage": "Storage",
     "grades": "Grades",
     "myGrades": "My Grades",
     "viva": "Viva",
